# OperationSystem

./: CMakeLists.txt
lab10/: CMakeLists.txt
lab10/doc/: doc.txt
lab10/src/: delete.c  read.c
lab11/doc/: doc.txt
lab12/doc/: doc.txt
lab13/: CMakeLists.txt
lab13/doc/: doc.txt
lab13/src/: queue.c  queue_cond.c  queue_mutex.c  test.h
lab2/: CMakeLists.txt  task1.c  task2.c  task3.c  task4.c  task7.c  task8.c
lab3/: CMakeLists.txt
lab3/doc/: doc.txt
lab3/src/: memory-user.c
lab4/: CMakeLists.txt
lab4/doc/: valgrind_task5.txt  valgrind_task6.txt  valgrind_task7.txt  valgrind_task8.txt
lab4/src/: task1_aspace.c  task2.c  task3_null.c  task6.c  task7.c  task8.c
lab6/: CMakeLists.txt
lab6/doc/: text.txt
lab6/src/: task1_check-xor.c  task2_check-fletcher.c  task3_crc.c  task4.c  task5_check-csum.c  task5_create-csum.c  xor_csum.h
lab6/tests/: t2.txt  t2.txt.csum
lab7/: CMakeLists.txt
lab7/src/: task1.c
lab9/doc/: doc.txt
