project(lab4)

add_executable(${PROJECT_NAME}-task1_aspace src/task1_aspace.c)
add_executable(${PROJECT_NAME}-task2 src/task2.c)
add_executable(${PROJECT_NAME}-task3_null src/task3_null.c)
add_executable(${PROJECT_NAME}-task6 src/task6.c)
add_executable(${PROJECT_NAME}-task7 src/task7.c)
add_executable(${PROJECT_NAME}-task8 src/task8.c)